Fix retrieve data and category pages

--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,11 @@
     <!-- App Controllers-->
     <script src="controllers/mapController.js"></script>
     <script src="controllers/hotelCodeController.js"></script>
+    <script src="controllers/hotelPageController.js"></script>
+    <script src="controllers/facilitiesController.js"></script>
+    <script src="controllers/offersController.js"></script>
+    <script src="controllers/eventsController.js"></script>
+    <script src="controllers/restaurantController.js"></script>
   </head>
   <body ng-app="StayAt">
 
@@ -46,9 +51,9 @@
       
       </ion-view>
 
-      <div class="bar bar-footer">
+      <ion-footer-bar class="bar bar-footer">
         <div class="title">©StayAt 2015</div>
-      </div>
+      </ion-footer-bar>
 
   </body>
 </html>
